--- a/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
+++ b/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
@@ -41,7 +41,7 @@
 		  </nav>  
 
 		<div id="theBoard">
-			<img src="images/board0.JPG" class="board" >
+			<img src="images/board0.jpg" class="board" >
 			<img src="images/red.png" id="RedCoin" class="coin" >
 			<img src="images/green.png" id="GreenCoin" class="coin" >
 			<img src="images/blue.png" id="BlueCoin" class="coin" >
@@ -74,16 +74,16 @@
 					<i class="fa fa-angle-down" style="font-size: 36px;"></i>
 					<div class="dropdown-content">
 						<div class="boardSelector boardSelected" style = "float:left"  id="board_0"> 
-							<img class = "dropdownImages" src="images/board0.JPG">
+							<img class = "dropdownImages" src="images/board0">
 						</div>
 						<div class="boardSelector" style = "float:right" id="board_1"> 
-							<img class = "dropdownImages" src="images/board1.JPG">
+							<img class = "dropdownImages" src="images/board1">
 						</div>
 						<div class="boardSelector" style = "float:left"  id="board_2"> 
-							<img class = "dropdownImages" src="images/board2.JPG" >
+							<img class = "dropdownImages" src="images/board2" >
 						</div>
 						<div class="boardSelector" style = "float:right" id="board_3"> 
-							<img class = "dropdownImages" src="images/board3.JPG">
+							<img class = "dropdownImages" src="images/board3">
 						</div>
 					</div>
 				</div>
