--- a/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
+++ b/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
@@ -74,16 +74,16 @@
 					<i class="fa fa-angle-down" style="font-size: 36px;"></i>
 					<div class="dropdown-content">
 						<div class="boardSelector boardSelected" style = "float:left"  id="board_0"> 
-							<img class = "dropdownImages" src="images/board0">
+							<img class = "dropdownImages" src="images/board0.jpg">
 						</div>
 						<div class="boardSelector" style = "float:right" id="board_1"> 
-							<img class = "dropdownImages" src="images/board1">
+							<img class = "dropdownImages" src="images/board1.jpg">
 						</div>
 						<div class="boardSelector" style = "float:left"  id="board_2"> 
-							<img class = "dropdownImages" src="images/board2" >
+							<img class = "dropdownImages" src="images/board2.jpg" >
 						</div>
 						<div class="boardSelector" style = "float:right" id="board_3"> 
-							<img class = "dropdownImages" src="images/board3">
+							<img class = "dropdownImages" src="images/board3.jpg">
 						</div>
 					</div>
 				</div>
