--- a/Projects/BoardGames/Minesweeper/Minesweeper.html
+++ b/Projects/BoardGames/Minesweeper/Minesweeper.html
@@ -19,6 +19,8 @@
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid" >
 			  <div class="navbar-header" >
+				<a class="navbar-brand" style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a>
+				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
 				<a class="navbar-brand" style="font-size: 22px;" href="../BoardGames.html">Board Games</a>
 				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
 				<a class="navbar-brand" style="font-size: 22px;" href="Minesweeper.html">Minesweeper</a>
