--- a/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
+++ b/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
@@ -10,7 +10,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 		<script type="text/javascript" src="snakeLadderScript.js"></script>
-		<link type="text/css" rel="stylesheet" href="snakeLadderStyle.css">
+		<link type="text/css" rel="stylesheet" href="SnakeLadderStyle.css">
 	</head>
 	
 	<body>
@@ -18,6 +18,8 @@
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid" >
 			  <div class="navbar-header" >
+				<a class="navbar-brand" style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a>
+				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
 				<a class="navbar-brand" style="font-size: 22px;" href="../BoardGames.html">Board Games</a>
 				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
 				<a class="navbar-brand" style="font-size: 22px;" href="SnakeLadder.html">Snake  Ladder</a>
