--- a/Projects/BoardGames/Solitaire/Solitaire.html
+++ b/Projects/BoardGames/Solitaire/Solitaire.html
@@ -18,6 +18,8 @@
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid" >
 			  <div class="navbar-header" >
+				<a class="navbar-brand" style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a>
+				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
 				<a class="navbar-brand" style="font-size: 22px;" href="../BoardGames.html">Board Games</a>
 				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
 				<a class="navbar-brand" style="font-size: 22px;" href="Solitaire.html">Solitaire</a>
