--- a/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
+++ b/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
@@ -11,6 +11,7 @@
 
 		<script type="text/javascript" src="snakeLadderScript.js"></script>
 		<link type="text/css" rel="stylesheet" href="SnakeLadderStyle.css">
+		<link type="text/css" rel="stylesheet" href="snakeLadderStyle.css">
 	</head>
 	
 	<body>
