--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				  <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
 					<li><a href="Projects/BoardGames/BoardGames.html" style="font-size: 22px;" >Board Games</a></li>
-					<li><a href="Projects/MyWay/MyWay.html" style="font-size: 22px;">MyWay UI</a></li>
+					<li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px;">MyWay UI</a></li>
 				  </ul>
 				</li>
 			  </ul>
