--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div class="container-fluid" >
 			  <div class="navbar-header" >
 				<a class="navbar-brand" style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a> 
+				<a class="navbar-brand" style="font-size: 22px;" href="/Resume/TejasJadhav_Resume.pdf">Resume</a> 
 			  </div>
 
 			  <ul class="nav navbar-nav navbar-right"   >
