--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				  <ul class="dropdown-menu">
 					<li><a href="Projects/BoardGames/BoardGames.html" style="font-size: 22px;" >Board Games</a></li>
 					<li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px;">MyWay UI</a></li>
+					<li><a href="https://github.com/TeeeJaey/repositories" style="font-size: 22px;">Other Projects</a></li>
 				  </ul>
 				</li>
 			  </ul>
