case sensesitive id Fixes

--- a/Projects/BoardGames/Business/Business.html
+++ b/Projects/BoardGames/Business/Business.html
@@ -62,10 +62,10 @@
 
 		<div id="theBoard">
 			<img src="images/board.png" class="board" >
-			<img src="images/red.png" id="RedCoin" class="coin" >
-			<img src="images/green.png" id="GreenCoin" class="coin" >
-			<img src="images/blue.png" id="BlueCoin" class="coin" >
-			<img src="images/yellow.png" id="YellowCoin" class="coin" >
+			<img src="images/red.png" id="redCoin" class="coin" >
+			<img src="images/green.png" id="greenCoin" class="coin" >
+			<img src="images/blue.png" id="blueCoin" class="coin" >
+			<img src="images/yellow.png" id="yellowCoin" class="coin" >
 		</div>
 		
 		<div id="allControls">
@@ -95,79 +95,79 @@
 
 			<div id="gameControls">
 
-				<div class="playerData currChanceData" id="RedData"  >
-					<div id="RedBankruptOverlay" >
-						<img src="images/red.png" id="RedDataCoin" class="dataCoin" >
+				<div class="playerData currChanceData" id="redData"  >
+					<div id="redBankruptOverlay" >
+						<img src="images/red.png" id="redDataCoin" class="dataCoin" >
 						<img src="images/city.png"  class="cityIcon" >
-						<div class="cityValue" id="RedCityValue" > 0 </div>
+						<div class="cityValue" id="redCityValue" > 0 </div>
 						<img src="images/bldgs/red0.png"  class="houseIcon" >
-						<div class="houseValue" id="RedHouseValue" > 0 </div>
+						<div class="houseValue" id="redHouseValue" > 0 </div>
 						<img src="images/bldgs/redH.png"  class="hotelIcon" >
-						<div class="hotelValue" id="RedHotelValue" > 0 </div>
+						<div class="hotelValue" id="redHotelValue" > 0 </div>
 						<img src="images/money.png"  class="moneyIcon" >
-						<div class="moneyValue" id="RedMoneyValue" > &#x20b9; 1000</div>
+						<div class="moneyValue" id="redMoneyValue" > &#x20b9; 1000</div>
 					</div>
 					<div class="currentChanceBtns">
 						<button id="btnWork" class="btn btn-primary" > Work </button>
 						<button id="btnDone" class="btn btn-primary" > Done </button>
 					</div>
-					<div class="bankruptData" id="RedBankruptData" >
-						<div id="RedBankruptLabel" > B A N K R U P T </div> 
-						<div id="RedBankruptRank" > Rank : X </div> 
+					<div class="bankruptData" id="redBankruptData" >
+						<div id="redBankruptLabel" > B A N K R U P T </div> 
+						<div id="redBankruptRank" > Rank : X </div> 
 					</div>
                 </div>
 
-				<div class="playerData " id="GreenData" >
-					<div id="GreenBankruptOverlay"  >
-						<img src="images/green.png" id="GreenDataCoin" class="dataCoin" >
+				<div class="playerData " id="greenData" >
+					<div id="greenBankruptOverlay"  >
+						<img src="images/green.png" id="greenDataCoin" class="dataCoin" >
 						<img src="images/city.png"  class="cityIcon" >
-						<div class="cityValue" id="GreenCityValue" > 0 </div>
+						<div class="cityValue" id="greenCityValue" > 0 </div>
 						<img src="images/bldgs/green0.png"  class="houseIcon" >
-						<div class="houseValue" id="GreenHouseValue" > 0 </div>
+						<div class="houseValue" id="greenHouseValue" > 0 </div>
 						<img src="images/bldgs/greenH.png"  class="hotelIcon" >
-						<div class="hotelValue" id="GreenHotelValue" > 0 </div>
+						<div class="hotelValue" id="greenHotelValue" > 0 </div>
 						<img src="images/money.png"  class="moneyIcon" >
-						<div class="moneyValue" id="GreenMoneyValue" > &#x20b9; 1000</div>
+						<div class="moneyValue" id="greenMoneyValue" > &#x20b9; 1000</div>
 					</div>
-					<div class="bankruptData" id="GreenBankruptData" >
-						<div id="GreenBankruptLabel" > B A N K R U P T </div> 
-						<div id="GreenBankruptRank" > Rank : X </div> 
+					<div class="bankruptData" id="greenBankruptData" >
+						<div id="greenBankruptLabel" > B A N K R U P T </div> 
+						<div id="greenBankruptRank" > Rank : X </div> 
 					</div>
 				</div>
 
-				<div class="playerData" id="BlueData" >
-					<div id="BlueBankruptOverlay"  >
-						<img src="images/blue.png" id="BlueDataCoin" class="dataCoin" >
+				<div class="playerData" id="blueData" >
+					<div id="blueBankruptOverlay"  >
+						<img src="images/blue.png" id="blueDataCoin" class="dataCoin" >
 						<img src="images/city.png"  class="cityIcon" >
-						<div class="cityValue" id="BlueCityValue" > 0 </div>
+						<div class="cityValue" id="blueCityValue" > 0 </div>
 						<img src="images/bldgs/blue0.png"  class="houseIcon" >
-						<div class="houseValue" id="BlueHouseValue" > 0 </div>
+						<div class="houseValue" id="blueHouseValue" > 0 </div>
 						<img src="images/bldgs/blueH.png"  class="hotelIcon" >
-						<div class="hotelValue" id="BlueHotelValue" > 0 </div>
+						<div class="hotelValue" id="blueHotelValue" > 0 </div>
 						<img src="images/money.png"  class="moneyIcon" >
-						<div class="moneyValue" id="BlueMoneyValue" > &#x20b9; 1000</div>
+						<div class="moneyValue" id="blueMoneyValue" > &#x20b9; 1000</div>
 					</div>
-					<div class="bankruptData" id="BlueBankruptData" >
-						<div id="BlueBankruptLabel" > B A N K R U P T </div> 
-						<div id="BlueBankruptRank" > Rank : X </div> 
+					<div class="bankruptData" id="blueBankruptData" >
+						<div id="blueBankruptLabel" > B A N K R U P T </div> 
+						<div id="blueBankruptRank" > Rank : X </div> 
 					</div>
 				</div>
 
-				<div class="playerData" id="YellowData" >
-					<div id="YellowBankruptOverlay"  >
-						<img src="images/yellow.png" id="YellowDataCoin" class="dataCoin" >
+				<div class="playerData" id="yellowData" >
+					<div id="yellowBankruptOverlay"  >
+						<img src="images/yellow.png" id="yellowDataCoin" class="dataCoin" >
 						<img src="images/city.png"  class="cityIcon" >
-						<div class="cityValue" id="YellowCityValue" > 0 </div>
+						<div class="cityValue" id="yellowCityValue" > 0 </div>
 						<img src="images/bldgs/yellow0.png"  class="houseIcon" >
-						<div class="houseValue" id="YellowHouseValue" > 0 </div>
+						<div class="houseValue" id="yellowHouseValue" > 0 </div>
 						<img src="images/bldgs/yellowH.png"  class="hotelIcon" >
-						<div class="hotelValue" id="YellowHotelValue" > 0 </div>
+						<div class="hotelValue" id="yellowHotelValue" > 0 </div>
 						<img src="images/money.png"  class="moneyIcon" >
-						<div class="moneyValue" id="YellowMoneyValue" > &#x20b9; 1000</div>
+						<div class="moneyValue" id="yellowMoneyValue" > &#x20b9; 1000</div>
 					</div>
-					<div class="bankruptData" id="YellowBankruptData" >
-						<div id="YellowBankruptLabel" > B A N K R U P T </div> 
-						<div id="YellowBankruptRank" > Rank : X </div> 
+					<div class="bankruptData" id="yellowBankruptData" >
+						<div id="yellowBankruptLabel" > B A N K R U P T </div> 
+						<div id="yellowBankruptRank" > Rank : X </div> 
 					</div>
 				</div>
 				
@@ -350,19 +350,19 @@
 					<div class="btn-group btn-group-toggle" data-toggle="buttons">
 						<label class="btn btn-info tradeBtns redTradeSelector active">
 							<input type="radio" name="tradeLeftPlayerSelector" value="0" autocomplete="off" checked > 
-							<img src="images/red.png" id="RedCoin" class="tradeCoin" >
+							<img src="images/red.png" id="redCoin" class="tradeCoin" >
 						</label>
 						<label class="btn btn-info tradeBtns greenTradeSelector">
 							<input type="radio" name="tradeLeftPlayerSelector" value="1" autocomplete="off"> 
-							<img src="images/green.png" id="GreenCoin" class="tradeCoin" >
+							<img src="images/green.png" id="greenCoin" class="tradeCoin" >
 						</label>
 						<label class="btn btn-info tradeBtns blueTradeSelector">
 							<input type="radio" name="tradeLeftPlayerSelector" value="2" autocomplete="off"> 
-							<img src="images/blue.png" id="BlueCoin" class="tradeCoin" >
+							<img src="images/blue.png" id="blueCoin" class="tradeCoin" >
 						</label>
 						<label class="btn btn-info tradeBtns yellowTradeSelector">
 							<input type="radio" name="tradeLeftPlayerSelector" value="3" autocomplete="off"> 
-							<img src="images/yellow.png" id="YellowCoin" class="tradeCoin" >
+							<img src="images/yellow.png" id="yellowCoin" class="tradeCoin" >
 						</label>
 					</div>
 					<div id="tradeLeftPropertyContainer">
@@ -380,19 +380,19 @@
 					<div class="btn-group btn-group-toggle" data-toggle="buttons">
 						<label class="btn btn-info tradeBtns redTradeSelector active">
 							<input type="radio" name="tradeRightPlayerSelector" value="0" autocomplete="off"checked > 
-							<img src="images/red.png" id="RedCoin" class="tradeCoin" >
+							<img src="images/red.png" id="redCoin" class="tradeCoin" >
 						</label>
 						<label class="btn btn-info tradeBtns greenTradeSelector">
 							<input type="radio" name="tradeRightPlayerSelector" value="1" autocomplete="off"> 
-							<img src="images/green.png" id="GreenCoin" class="tradeCoin" >
+							<img src="images/green.png" id="greenCoin" class="tradeCoin" >
 						</label>
 						<label class="btn btn-info tradeBtns blueTradeSelector">
 							<input type="radio" name="tradeRightPlayerSelector" value="2" autocomplete="off"> 
-							<img src="images/blue.png" id="BlueCoin" class="tradeCoin" >
+							<img src="images/blue.png" id="blueCoin" class="tradeCoin" >
 						</label>
 						<label class="btn btn-info tradeBtns yellowTradeSelector">
 							<input type="radio" name="tradeRightPlayerSelector" value="3" autocomplete="off"> 
-							<img src="images/yellow.png" id="YellowCoin" class="tradeCoin" >
+							<img src="images/yellow.png" id="yellowCoin" class="tradeCoin" >
 						</label>
 					</div>
 					<div id="tradeRightPropertyContainer">
