--- a/Projects/BoardGames/BoardGames.html
+++ b/Projects/BoardGames/BoardGames.html
@@ -34,7 +34,7 @@
 		<img class="backgroundImage" src="images/boardGames.jpg" />
 
 		<div class="searchLinks">
-			<div  id="gameList" style="width:85% ;margin-bottom: 10%;">
+			<div  id="gameList" class="game-list" >
 				<a id="Minesweeper" href="Minesweeper/Minesweeper.html" class="searchLink">
 					Minesweeper 
 				</a>
