--- a/index.html
+++ b/index.html
@@ -14,26 +14,23 @@
 	</head>
 	
 	<body>		
-		<nav class="navbar navbar-inverse" >
-			<div class="container-fluid" >
-			  <div class="navbar-header" >
-				<a class="navbar-brand" style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a> 
-			  </div>
+		<div class="flex-navigation">
+			<a style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a> 
 
-			  <ul class="nav navbar-nav navbar-right"   >
-				<li class="dropdown">
-				  <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 22px;" > Checkout Projects
-				  <span class="caret"></span></a>
-				  <ul class="dropdown-menu">
+			<div class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 22px;" > 
+					Checkout Projects
+					<span class="caret"></span>
+				</a>
+				<ul class="dropdown-menu">
 					<li><a href="Projects/BoardGames/BoardGames.html" style="font-size: 22px;" >Board Games</a></li>
 					<li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px;">MyWay UI</a></li>
+					<li><a href="Projects/mobile.html" style="font-size: 22px;">Sample Profile</a></li>
 					<li><a href="https://github.com/TeeeJaey?tab=repositories" style="font-size: 22px;">Other Projects</a></li>
-				  </ul>
-				</li>
-			  </ul>
-
+				</ul>
 			</div>
-		</nav>  
+		</div>
+		
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Tejas Jadhav!</h1>
