--- a/Projects/mobile.html
+++ b/Projects/mobile.html
@@ -109,9 +109,9 @@
 
 	<body>
 		<div id="header">
-				<a href="#" id="back"> <i class="fa">&#xf104;</i> </a>
+				<a href="../index.html" id="back"> <i class="fa">&#xf104;</i> </a>
 				<div class="avatar">
-					<a href="../index.html" id="camico"><i style="color:white" class="fa">&#xf030;</i></a>
+					<a href="#" id="camico"><i style="color:white" class="fa">&#xf030;</i></a>
 					<a href="#" id="profile"><img alt="" src="https://pi.tedcdn.com/r/pf.tedcdn.com/images/playlists/stefan_sagmeister_playlists.jpg?quality=89&w=500"></a>
 					<a href="#" id="brushico"><i style="color:white" class="fa">&#xf1fc;</i></a>
 				</div>
