--- a/Projects/BoardGames/BoardGames.html
+++ b/Projects/BoardGames/BoardGames.html
@@ -14,22 +14,20 @@
 	</head>
 	
 	<body>		
-		<nav class="navbar navbar-inverse" >
-			<div class="container-fluid" >
-			  <div class="navbar-header" >
-				<a class="navbar-brand" style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a>
-				<i class="fa fa-angle-right navbar-brand"  style="font-size: 22px;"></i>
-				<a class="navbar-brand" style="font-size: 22px;" href="BoardGames.html">Board Games</a>
-			  </div>
-
-			   <div class="navbar-form navbar-right" id="searchForm" style="font-size: 20px;"  >
-				  <input type="text" id="searchInput" placeholder="Search game">
-				  <button id="searchSubmit" type="submit" class="btn btn-default">
-					  <i style="font-size: 20px;" class="fa fa-search"></i>
-				  </button>
-				</div>
+		<div class="flex-navigation">
+			<div class="flex-center" >
+				<a href="https://teeejaey.github.io/">Home</a> 
+				<i class="fa fa-angle-right" style="padding-top:2px" ></i>
+				<a href="BoardGames.html">Board Games</a>
 			</div>
-		</nav>  
+			
+			<div class="flex-center" id="searchForm" style="font-size: 20px;"  >
+				<input type="text" id="searchInput" placeholder="Search game">
+				<button id="searchSubmit" type="submit" class="btn btn-default">
+					<i style="font-size: 20px;" class="fa fa-search"></i>
+				</button>
+			</div>
+		</div>
 
 		<img class="backgroundImage" src="images/boardGames.jpg" />
 
