Sudoku - Auto Saving

--- a/Projects/BoardGames/Sudoku/sudoku.html
+++ b/Projects/BoardGames/Sudoku/sudoku.html
@@ -110,7 +110,7 @@
 					</tr>
 				</table>
 				<hr>
-				<button id="btnStartGame" class="btn btn-default" onclick="document.location.reload(true)"> Get New game </button>
+				<button id="btnNewGame" class="btn btn-default" onclick="document.location.reload(true)"> Get New game </button>
 				<button id="btnResetGame" class="btn btn-default" > Reset Current game </button>
 			</div>
 		
