--- a/Projects/BoardGames/Ludo/Ludo.html
+++ b/Projects/BoardGames/Ludo/Ludo.html
@@ -52,26 +52,25 @@
 			</div>
 			
 			<div id="allControls" >
-				
-				<div id="startcontrols"  v-if="game.gameStatus == -1"> 
-					<span style="color:white">Number Of Players</span>
-					<br>
-					<div class="btn-group btn-group-toggle" data-toggle="buttons">
-						<label class="btn btn-info active">
-							<input type="radio" name="nmbrOfPlayers" autocomplete="off" value="2" checked > 2
-						</label>
-						<label class="btn btn-info">
-							<input type="radio" name="nmbrOfPlayers" value="3" autocomplete="off"> 3
-						</label>
-						<label class="btn btn-info">
-							<input type="radio" name="nmbrOfPlayers" value="4" autocomplete="off"> 4
-						</label>
+				<div class="startControls" v-if="game.gameStatus == -1"> 
+					<h4 class="instruct" > Number Of Players </h4>
+					<hr>
+					<div class="btn-group btn-group-toggle" data-toggle="buttons" > 
+						<label class="btn btn-default btnDiff active" >
+							<input type="radio" name="nmbrOfPlayers" value="2" checked > 2 </input> 
+						</label> 
+						<label class="btn btn-default btnDiff"> 
+							<input type="radio" name="nmbrOfPlayers" value="3" > 3 </input> 
+						</label> 
+						<label class="btn btn-default btnDiff"> 
+							<input type="radio" name="nmbrOfPlayers" value="4"> 4 </input> 
+						</label> 
 					</div>
 					<hr>
-					<button id="btnStartGame" class="btn btn-default game-btns" > Start game </button>
+					<button id="btnStartGame" class="btn btn-default game-btns" > Start game</button>
 				</div>
 				
-				<div id="gameControls"  v-if="game.gameStatus == 0"> 
+				<div class="controls"  v-if="game.gameStatus == 0"> 
 					<h3 id="instruct" v-bind:style="{color: game.players[game.currPlayer].color}" > {{game.instruction}} </h3>
 					<hr> 
 					<div id="theDice">
@@ -81,7 +80,7 @@
 				</div>
 
 
-				<div id="endControls" v-if="game.gameStatus == 1"> 
+				<div class="controls" v-if="game.gameStatus == 1"> 
 					<h3 id="endInstruct" v-for="(color,i) in game.endList" v-bind:style="{color: color}"  > {{i+1}} : {{ color.toUpperCase() }} </h3>
 					<hr>
 					<button id="btnPlayAgain" class="btn btn-default game-btns" > Play again </button>
