--- a/Projects/BoardGames/Business/Business.html
+++ b/Projects/BoardGames/Business/Business.html
@@ -48,19 +48,20 @@
 		
 		<div id="allControls">
 			
-			<div id="startcontrols"> Number Of Players
-				<br>
+			<div id="startcontrols"> 
+				<h3 class="instruct">Number Of Players</h3>
+				<hr>
 
 				<div class="btn-group btn-group-toggle" data-toggle="buttons">
-					<label class="btn btn-info active">
-					<input type="radio" name="nmbrOfPlayers" autocomplete="off" value="2" checked > 2
+					<label class="btn btn-default btnDiff active">
+						<input type="radio" name="nmbrOfPlayers" autocomplete="off" value="2" checked > 2
 					</label>
 				 
-					<label class="btn btn-info">
+					<label class="btn btn-default btnDiff">
 					<input type="radio" name="nmbrOfPlayers" value="3" autocomplete="off"> 3
 					</label>
 				 
-					<label class="btn btn-info">
+					<label class="btn btn-default btnDiff">
 					<input type="radio" name="nmbrOfPlayers" value="4" autocomplete="off"> 4
 					</label>
 				 </div>
