--- a/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
+++ b/Projects/BoardGames/SnakeNLadder/SnakeLadder.html
@@ -46,7 +46,7 @@
 				</div>
 				<hr>
 
-				<div class="dropdown">
+				<div class="dropdown board-chooser">
 					Choose a Board
 					<i class="fa fa-angle-down" style="font-size: 36px;"></i>
 					<div class="dropdown-content">
