--- a/Projects/BoardGames/BoardGames.html
+++ b/Projects/BoardGames/BoardGames.html
@@ -3,6 +3,7 @@
 		<title>	Board Games </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -16,9 +17,15 @@
 	<body>		
 		<div class="flex-navigation">
 			<div class="flex-center" >
-				<a href="https://teeejaey.github.io/">Home</a> 
+				<a href="https://teeejaey.github.io/" class="hidden-xs">Home</a> 
+				<a href="https://teeejaey.github.io/" class="hidden-sm hidden-lg hidden-md" > 
+					<i class="fas fa-home"></i>
+				</a>
 				<i class="fa fa-angle-right" style="padding-top:2px" ></i>
-				<a href="BoardGames.html">Board Games</a>
+				<a href="BoardGames.html" class="hidden-xs">Board Games</a>
+				<a  href="../BoardGames.html" class="hidden-sm hidden-lg hidden-md">
+					<i class="fas fa-dice"></i>
+				</a>
 			</div>
 			
 			<div class="flex-center" id="searchForm" style="font-size: 20px;"  >
