--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				</a>
 				<ul class="dropdown-menu">
 					<li><a href="Projects/BoardGames/BoardGames.html" style="font-size: 22px;" >Board Games</a></li>
+					<li><a href="https://teeejaey.github.io/csb-boj50/" style="font-size: 22px;" >Movie Trailers React App</a></li>
 					<li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px;">MyWay UI</a></li>
 					<li><a href="Projects/mobile.html" style="font-size: 22px;">Sample Profile</a></li>
 					<li><a href="https://github.com/TeeeJaey?tab=repositories" style="font-size: 22px;">Other Projects</a></li>
