Tetris ui changes and Snake start

--- a/Projects/BoardGames/BoardGames.html
+++ b/Projects/BoardGames/BoardGames.html
@@ -70,12 +70,15 @@
 				<a id="Tetris" href="Tetris/tetris.html" class="searchLink">
 					Tetris
 				</a> 
+				<a id="Snake" href="Snake/snake.html" class="searchLink">
+					Snake
+				</a> 
 			</div>
 		</div>
 		
 		<div class="footer" >
-			<div>Developed by - Tejas Jadhav</div>
 			<div>
+				Developed by Tejas Jadhav - 
 				<a class="footerLinks" href="https://github.com/TeeeJaey" target="_blank">
 					<i class="fa fa-github" ></i>
 				</a>
