--- a/Projects/BoardGames/Business/Business.html
+++ b/Projects/BoardGames/Business/Business.html
@@ -327,19 +327,19 @@
             <div class="row"> 
                 <div class="col-xs-6" > 
 					<div class="btn-group btn-group-toggle" data-toggle="buttons">
-						<label class="btn btn-info tradeBtns redTradeSelector active">
+						<label class="btn btn-default btnDiff tradeBtns redTradeSelector active">
 							<input type="radio" name="tradeLeftPlayerSelector" value="0" autocomplete="off" checked > 
 							<img src="images/red.png" id="redCoin" class="tradeCoin" >
 						</label>
-						<label class="btn btn-info tradeBtns greenTradeSelector">
+						<label class="btn btn-default btnDiff tradeBtns greenTradeSelector">
 							<input type="radio" name="tradeLeftPlayerSelector" value="1" autocomplete="off"> 
 							<img src="images/green.png" id="greenCoin" class="tradeCoin" >
 						</label>
-						<label class="btn btn-info tradeBtns blueTradeSelector">
+						<label class="btn btn-default btnDiff tradeBtns blueTradeSelector">
 							<input type="radio" name="tradeLeftPlayerSelector" value="2" autocomplete="off"> 
 							<img src="images/blue.png" id="blueCoin" class="tradeCoin" >
 						</label>
-						<label class="btn btn-info tradeBtns yellowTradeSelector">
+						<label class="btn btn-default btnDiff tradeBtns yellowTradeSelector">
 							<input type="radio" name="tradeLeftPlayerSelector" value="3" autocomplete="off"> 
 							<img src="images/yellow.png" id="yellowCoin" class="tradeCoin" >
 						</label>
@@ -357,19 +357,19 @@
 				
                 <div class="col-xs-6"> 
 					<div class="btn-group btn-group-toggle" data-toggle="buttons">
-						<label class="btn btn-info tradeBtns redTradeSelector active">
+						<label class="btn btn-default btnDiff tradeBtns redTradeSelector active">
 							<input type="radio" name="tradeRightPlayerSelector" value="0" autocomplete="off"checked > 
 							<img src="images/red.png" id="redCoin" class="tradeCoin" >
 						</label>
-						<label class="btn btn-info tradeBtns greenTradeSelector">
+						<label class="btn btn-default btnDiff tradeBtns greenTradeSelector">
 							<input type="radio" name="tradeRightPlayerSelector" value="1" autocomplete="off"> 
 							<img src="images/green.png" id="greenCoin" class="tradeCoin" >
 						</label>
-						<label class="btn btn-info tradeBtns blueTradeSelector">
+						<label class="btn btn-default btnDiff tradeBtns blueTradeSelector">
 							<input type="radio" name="tradeRightPlayerSelector" value="2" autocomplete="off"> 
 							<img src="images/blue.png" id="blueCoin" class="tradeCoin" >
 						</label>
-						<label class="btn btn-info tradeBtns yellowTradeSelector">
+						<label class="btn btn-default btnDiff tradeBtns yellowTradeSelector">
 							<input type="radio" name="tradeRightPlayerSelector" value="3" autocomplete="off"> 
 							<img src="images/yellow.png" id="yellowCoin" class="tradeCoin" >
 						</label>
