--- a/Projects/BoardGames/Snake/snake.html
+++ b/Projects/BoardGames/Snake/snake.html
@@ -10,22 +10,23 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 		<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-		 
 		
 		<script type="text/javascript" src="../scripts/importNavbar.js"></script>
 
 		<script type="text/javascript" src="scripts/Cell.js"></script>
-		<script type="text/javascript" src="scripts/Block.js"></script>
+		<script type="text/javascript" src="scripts/Snake.js"></script>
 		<script type="text/javascript" src="scripts/Game.js"></script>
-		<script type="text/javascript" src="scripts/tetris.js"></script>
-		<link type="text/css" rel="stylesheet" href="tetris.css">
+		<script type="text/javascript" src="scripts/script.js"></script>
+
+		<link type="text/css" rel="stylesheet" href="snake.css">
 		<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 	</head>
 	
 	<body>
 
 		<div id="navbar"> </div>
-
+		<img id="gameUnderDev" src="../images/underDev.png" style="position:fixed; left:10%;  width:80%; z-index: 999; margin:auto; display:none " />
+		
 		<div id="mainContent">
 
 			<table id="theBoard"  >
@@ -44,21 +45,19 @@
 				<div class="flex-row">
 					<button class="btn btn-default ctrlBtn" type="button" id="btnLeft" > <i class="fa fa-angle-left"  ></i>  </button> 
 					<div class="flex-column">
-						<button class="btn btn-default ctrlBtn" type="button" id="btnRotate" > <i class="fa fa-rotate-right"></i> </button> 
+						<button class="btn btn-default ctrlBtn" type="button" id="btnUp" > <i class="fa fa-angle-up"></i> </button> 
 						<button class="btn btn-default ctrlBtn" type="button" id="btnDown" > <i class="fa fa-angle-down"  ></i> </button>
 					</div>
 					<button class="btn btn-default ctrlBtn" type="button" id="btnRight" > <i class="fa fa-angle-right"  ></i> </button>
 				</div>
-				
 				<hr>
 				
 				<div id="instruct" class="row" > 
-					<span class="col-3">Next block</span>
-					<table class="col-3" style="padding: 20px; margin: auto;" >
-						<tr v-for="row in game.nextBlock.shape">
-							<td v-for="x in row" v-if="x" class="cell" v-bind:style="{backgroundColor: game.nextBlock.color}"> </td>
-						</tr>
-					</table>
+					<span class="col-3">
+						<div > Your Score : {{game.score}} </div>
+						<hr style="background:black">
+						<span style="color:green">Eat Greens </span> - <span style="color:red">Avoid Reds </span>
+					</span>
 				</div>
 
 				<hr>
