--- a/Projects/BoardGames/Snake/snake.html
+++ b/Projects/BoardGames/Snake/snake.html
@@ -55,8 +55,8 @@
 				<div id="instruct" class="row" > 
 					<span class="col-3">
 						<div > Your Score : {{game.score}} </div>
-						<hr style="background:black">
-						<span style="color:green">Eat Greens </span> - <span style="color:red">Avoid Reds </span>
+						<hr style="background:black"> 
+						<span style="color:red">Eat the Apples </span>
 					</span>
 				</div>
 
