--- a/Projects/BoardGames/Business/Business.html
+++ b/Projects/BoardGames/Business/Business.html
@@ -164,7 +164,7 @@
             <button id="btnRules" class="btn btn-danger menuBtns">Rules ?</button>
             <button id="saveGame" class="btn btn-danger menuBtns">Save game <i class="fa fa-download"></i></button>
             <button id="loadGame" class="btn btn-danger menuBtns">Load game <i class="fa fa-upload"></i></button>
-            <button id="btnTrade" class="btn btn-danger menuBtns">Trade <i class="fa fa-exchange"></i></button>
+            <button id="btnTrade" class="btn btn-danger menuBtns">Trade <i class="fas fa-exchange-alt"></i></button>
             <button id="btnLogs" class="btn btn-danger menuBtns">Logs <i class="fa fa-book"></i></button>
         </div>
 
