movie trailer app fixes

--- a/index.html
+++ b/index.html
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>	Tejas Jadhav </title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
- 
-		<link type="text/css" rel="stylesheet" href="index.css">
-	</head>
-	
-	<body>		
-		<div class="flex-navigation">
-			<a style="font-size: 22px;" href="https://teeejaey.github.io/">Home</a> 
+    <head>
+        <title>Tejas Jadhav</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-			<div class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 22px;" > 
-					Checkout Projects
-					<span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu">
-					<li><a href="Projects/BoardGames/BoardGames.html" style="font-size: 22px;" >Board Games</a></li>
-					<li><a href="https://teeejaey.github.io/csb-um4cu/" style="font-size: 22px;" >Movie Trailers React</a></li>
-					<li><a href="https://teeejaey.github.io/csb-hjc9p/" style="font-size: 22px;" >ChatBot</a></li>
-					<li><a href="https://teeejaey.github.io/csb-mlu79" style="font-size: 22px;" >Redux TaskManager</a></li>
-					<li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px;">MyWay UI </a></li>
-					<li><a href="Projects/mobile.html" style="font-size: 22px;">Sample Profile </a></li>
-					<li><a href="https://github.com/TeeeJaey?tab=repositories" style="font-size: 22px;">Other Projects</a></li>
-				</ul>
-			</div>
-		</div>
-		
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Tejas Jadhav!</h1>
-				
-			</div><!-- /.blurb -->
-		</div><!-- /.container -->
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-		<div class="footer" >
-			<div>Developed by - Tejas Jadhav</div>
-			<div>
-				<a class="footerLinks" href="https://github.com/TeeeJaey" target="_blank">
-					<i class="fa fa-github" ></i>
-				</a>
-				<a class="footerLinks" href="https://www.linkedin.com/in/tejas-jadhav-765043110/" target="_blank">
-					<i class="fa fa-linkedin" ></i>
-				</a>
-				<a class="footerLinks" href="mailto:tjadhav95@gmail.com" target="_blank">
-					<i class="fa fa-envelope" ></i>
-				</a>
-			</div>
-		</div>
-	</body>
+        <link type="text/css" rel="stylesheet" href="index.css" />
+    </head>
+
+    <body>
+        <div class="flex-navigation">
+            <a style="font-size: 22px" href="https://teeejaey.github.io/">Home</a>
+
+            <div class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 22px">
+                    Checkout Projects
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="Projects/BoardGames/BoardGames.html" style="font-size: 22px">Board Games</a></li>
+                    <li><a href="https://teeejaey.github.io/csb-u4u39z/" style="font-size: 22px">Movie Trailers React</a></li>
+                    <li><a href="https://teeejaey.github.io/csb-hjc9p/" style="font-size: 22px">ChatBot</a></li>
+                    <li><a href="https://teeejaey.github.io/csb-mlu79" style="font-size: 22px">Redux TaskManager</a></li>
+                    <li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px">MyWay UI </a></li>
+                    <li><a href="Projects/mobile.html" style="font-size: 22px">Sample Profile </a></li>
+                    <li><a href="https://github.com/TeeeJaey?tab=repositories" style="font-size: 22px">Other Projects</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="blurb">
+                <h1>Hi there, I'm Tejas Jadhav!</h1>
+            </div>
+            <!-- /.blurb -->
+        </div>
+        <!-- /.container -->
+
+        <div class="footer">
+            <div>Developed by - Tejas Jadhav</div>
+            <div>
+                <a class="footerLinks" href="https://github.com/TeeeJaey" target="_blank">
+                    <i class="fa fa-github"></i>
+                </a>
+                <a class="footerLinks" href="https://www.linkedin.com/in/tejas-jadhav-765043110/" target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+                <a class="footerLinks" href="mailto:tjadhav95@gmail.com" target="_blank">
+                    <i class="fa fa-envelope"></i>
+                </a>
+            </div>
+        </div>
+    </body>
 </html>
