--- a/Projects/BoardGames/BoardGames.html
+++ b/Projects/BoardGames/BoardGames.html
@@ -52,6 +52,7 @@
                 <a id="Tetris" href="Tetris/tetris.html" class="searchLink"> Tetris </a>
                 <a id="Snake" href="Snake/snake.html" class="searchLink"> Snake </a>
                 <a id="Wordle" href="Wordle/wordle.html" class="searchLink"> Wordle </a>
+                <a id="2048" href="2048/2048.html" class="searchLink"> 2048 </a>
             </div>
         </div>
 
