--- a/index.html
+++ b/index.html
@@ -1,60 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="https://teeejaey.github.io/logo.svg" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Web site created using create-react-app" />
+        <link rel="manifest" href="https://teeejaey.github.io/manifest.json" />
         <title>Tejas Jadhav</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-        <link type="text/css" rel="stylesheet" href="index.css" />
+        <link href="https://teeejaey.github.io/static/css/main.77a76bff.chunk.css" rel="stylesheet" />
     </head>
-
     <body>
-        <div class="flex-navigation">
-            <a style="font-size: 22px" href="https://teeejaey.github.io/">Home</a>
-
-            <div class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 22px">
-                    Checkout Projects
-                    <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="https://teeejaey.github.io/BoardGames" style="font-size: 22px">Board Games</a></li>
-                    <li><a href="https://teeejaey.github.io/Movie-Trailers-Live" style="font-size: 22px">Movie Trailers React</a></li>
-                    <li><a href="https://teeejaey.github.io/ChatBot-Live" style="font-size: 22px">ChatBot</a></li>
-                    <li><a href="https://teeejaey.github.io/Redux-TaskManager-Live" style="font-size: 22px">Redux TaskManager</a></li>
-                    <li><a href="Projects/MyWay/MYWAY.html" style="font-size: 22px">MyWay UI </a></li>
-                    <li><a href="Projects/mobile.html" style="font-size: 22px">Sample Profile </a></li>
-                    <li><a href="https://github.com/TeeeJaey?tab=repositories" style="font-size: 22px">Other Projects</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="blurb">
-                <h1>Hi there, I'm Tejas Jadhav!</h1>
-            </div>
-            <!-- /.blurb -->
-        </div>
-        <!-- /.container -->
-
-        <div class="footer">
-            <div>Developed by - Tejas Jadhav</div>
-            <div>
-                <a class="footerLinks" href="https://github.com/TeeeJaey" target="_blank">
-                    <i class="fa fa-github"></i>
-                </a>
-                <a class="footerLinks" href="https://www.linkedin.com/in/tejas-jadhav-765043110/" target="_blank">
-                    <i class="fa fa-linkedin"></i>
-                </a>
-                <a class="footerLinks" href="mailto:tjadhav95@gmail.com" target="_blank">
-                    <i class="fa fa-envelope"></i>
-                </a>
-            </div>
-        </div>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+        <script>
+            !(function (e) {
+                function t(t) {
+                    for (var n, p, i = t[0], l = t[1], a = t[2], c = 0, s = []; c < i.length; c++)
+                        (p = i[c]), Object.prototype.hasOwnProperty.call(o, p) && o[p] && s.push(o[p][0]), (o[p] = 0);
+                    for (n in l) Object.prototype.hasOwnProperty.call(l, n) && (e[n] = l[n]);
+                    for (f && f(t); s.length; ) s.shift()();
+                    return u.push.apply(u, a || []), r();
+                }
+                function r() {
+                    for (var e, t = 0; t < u.length; t++) {
+                        for (var r = u[t], n = !0, i = 1; i < r.length; i++) {
+                            var l = r[i];
+                            0 !== o[l] && (n = !1);
+                        }
+                        n && (u.splice(t--, 1), (e = p((p.s = r[0]))));
+                    }
+                    return e;
+                }
+                var n = {},
+                    o = { 1: 0 },
+                    u = [];
+                function p(t) {
+                    if (n[t]) return n[t].exports;
+                    var r = (n[t] = { i: t, l: !1, exports: {} });
+                    return e[t].call(r.exports, r, r.exports, p), (r.l = !0), r.exports;
+                }
+                (p.m = e),
+                    (p.c = n),
+                    (p.d = function (e, t, r) {
+                        p.o(e, t) || Object.defineProperty(e, t, { enumerable: !0, get: r });
+                    }),
+                    (p.r = function (e) {
+                        "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }),
+                            Object.defineProperty(e, "__esModule", { value: !0 });
+                    }),
+                    (p.t = function (e, t) {
+                        if ((1 & t && (e = p(e)), 8 & t)) return e;
+                        if (4 & t && "object" == typeof e && e && e.__esModule) return e;
+                        var r = Object.create(null);
+                        if ((p.r(r), Object.defineProperty(r, "default", { enumerable: !0, value: e }), 2 & t && "string" != typeof e))
+                            for (var n in e)
+                                p.d(
+                                    r,
+                                    n,
+                                    function (t) {
+                                        return e[t];
+                                    }.bind(null, n),
+                                );
+                        return r;
+                    }),
+                    (p.n = function (e) {
+                        var t =
+                            e && e.__esModule
+                                ? function () {
+                                      return e.default;
+                                  }
+                                : function () {
+                                      return e;
+                                  };
+                        return p.d(t, "a", t), t;
+                    }),
+                    (p.o = function (e, t) {
+                        return Object.prototype.hasOwnProperty.call(e, t);
+                    }),
+                    (p.p = "https://teeejaey.github.io/");
+                var i = (this["webpackJsonpportfolio-app"] = this["webpackJsonpportfolio-app"] || []),
+                    l = i.push.bind(i);
+                (i.push = t), (i = i.slice());
+                for (var a = 0; a < i.length; a++) t(i[a]);
+                var f = l;
+                r();
+            })([]);
+        </script>
+        <script src="https://teeejaey.github.io/static/js/2.806b005d.chunk.js"></script>
+        <script src="https://teeejaey.github.io/static/js/main.a5146e9c.chunk.js"></script>
     </body>
 </html>
