--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="./logo.svg" />
+        <link rel="icon" href="/logo.svg" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="My Portfolio Page" />
-        <link rel="manifest" href="./manifest.json" />
+        <link rel="manifest" href="/manifest.json" />
         <title>Tejas Jadhav</title>
-        <link href="./static/css/main.790d9c6f.chunk.css" rel="stylesheet" />
+        <link href="/static/css/main.790d9c6f.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -87,7 +87,7 @@
                 t();
             })([]);
         </script>
-        <script src="./static/js/2.d9afa6b3.chunk.js"></script>
-        <script src="./static/js/main.e8dd2822.chunk.js"></script>
+        <script src="/static/js/2.d9afa6b3.chunk.js"></script>
+        <script src="/static/js/main.046f3e88.chunk.js"></script>
     </body>
 </html>
