--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="My Portfolio Page" />
         <link rel="manifest" href="/manifest.json" />
         <title>Tejas Jadhav</title>
-        <link href="/static/css/main.2f4c2f74.chunk.css" rel="stylesheet" />
+        <link href="/static/css/main.b08242c1.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -46,14 +46,20 @@
                         p.o(e, r) || Object.defineProperty(e, r, { enumerable: !0, get: t });
                     }),
                     (p.r = function (e) {
-                        "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }),
+                        "undefined" != typeof Symbol &&
+                            Symbol.toStringTag &&
+                            Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }),
                             Object.defineProperty(e, "__esModule", { value: !0 });
                     }),
                     (p.t = function (e, r) {
                         if ((1 & r && (e = p(e)), 8 & r)) return e;
                         if (4 & r && "object" == typeof e && e && e.__esModule) return e;
                         var t = Object.create(null);
-                        if ((p.r(t), Object.defineProperty(t, "default", { enumerable: !0, value: e }), 2 & r && "string" != typeof e))
+                        if (
+                            (p.r(t),
+                            Object.defineProperty(t, "default", { enumerable: !0, value: e }),
+                            2 & r && "string" != typeof e)
+                        )
                             for (var n in e)
                                 p.d(
                                     t,
@@ -87,7 +93,7 @@
                 t();
             })([]);
         </script>
-        <script src="/static/js/2.d1abf070.chunk.js"></script>
-        <script src="/static/js/main.180715f0.chunk.js"></script>
+        <script src="/static/js/2.c3c35231.chunk.js"></script>
+        <script src="/static/js/main.08e8e74b.chunk.js"></script>
     </body>
 </html>
